--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example WordPress Theme</title>
+    <title>AutoLens</title>
     <link rel="stylesheet" href="../../../../../../../Users/ilkkamtk/Downloads/leiska%202/style.css">
 </head>
 
@@ -18,6 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
+
                     <li><a href="#">Products</a></li>
                     <li><a href="#">About us</a></li>
                 </ul>
